--- a/docs/生活/随笔/我的原神旅行观测记录.md
+++ b/docs/生活/随笔/我的原神旅行观测记录.md
@@ -86,6 +86,21 @@ https://bbs.mihoyo.com/ys/article/30600790   <br/>
 --20221125
 
 
+想要打出高伤害值，最好四个人物配置四种元素打反应。而且最好有雷元素，因为雷火超载，雷水感电伤害最高。 <br/>
+班尼特--风车菊，芭芭拉--慕枫蘑菇，丽莎--落落莓，各种材料注意平常积累，基本是48小时才刷新。 <br/>
+没有垃圾角色，只有垃圾配置。最合适方式搭配最合适角色发挥最大化战力。 <br/>
+--20221128
+
+
+尘歌壶妙用无穷，6级信任可以买树脂和经验包。 <br/>
+如何升级信任等级只能制作新摆设。 <br/>
+如何购买新摆设，通过仙力值。 <br/>
+如何增加仙力值，室外摆石狮子，室内放屏风最划算。 <br/>
+石狮子需要白铁矿，通过探索派遣和挖矿。 <br/>
+屏风【松木折屏-云来帆影】需要松木，在蒙德靠近凯瑟琳的传送点有三处松木，循环砍伐。 <br/>
+--20221129
+
+
 
 
 ### 2.2、感想
@@ -116,7 +131,6 @@ https://bbs.mihoyo.com/ys/article/30600790   <br/>
 
 
 
-
 ## 3、观测枢
 
 ### 3.1、元素反应简图
@@ -127,7 +141,7 @@ https://bbs.mihoyo.com/ys/article/30600790   <br/>
 
 
 
-<mermaid>
+```mermaid
 graph TD
 雷 --> | 感电 | 水;
 雷 --> | 超载 | 火;
@@ -147,7 +161,7 @@ graph TD
 冰 --> | 超导 | 雷;
 冰 --> | 冻结 | 水;
 
-</mermaid>
+```
 
 ---
 
@@ -157,7 +171,7 @@ graph TD
 
 
 
-<mermaid>
+```mermaid
 graph LR
 元素反应 --> A1[增伤类]
 元素反应 --> B1[额外伤害类]
@@ -192,7 +206,7 @@ C121--> C1211[结晶盾承受量仅与等级及元素精通有关]
 D11--> D121[水草]
 D12--> D122[水冰]
 
-</mermaid>
+```
 
 - 元素反应的伤害均与触发角色的元素精通有着密切的联系。
 - 超载的群体伤害最高。感电的单体伤害最高。
