--- a/docs/生活/随笔/我的原神旅行观测记录.md
+++ b/docs/生活/随笔/我的原神旅行观测记录.md
@@ -4,13 +4,12 @@
 
 ## 1、说明
 
-《我的原神旅行观测记录》，又名《原神之旅》，记之以事，述之以情。
-
+《我的原神旅行观测记录》，又名《原神之旅》，记之以事，述之以情。<br/>
 自二零二二年十一月初开始下载原神，第一次玩这款全球知名游戏。安装包300多兆，但是装好后还要下载18g的资源，确实很大。<br/>
-之前只玩过比较简单功能相对单一的游戏，像qq农场、部落冲突、天天酷跑、和平精英等等。<br/>
-世界规模这么巨大，内容剧情这么精彩的游戏还是首次接触。<br/>
+之前只玩过功能比较简单、内容相对单一的游戏，像qq农场、部落冲突、天天酷跑、和平精英等等。<br/>
+世界规模如此巨大，内容剧情如此精彩，画面色彩如此绚丽的游戏还是首次接触。<br/>
 想不到一接触就入迷了，一入迷难以自拔，故此记录，以作旅行感想。<br/>
-原神UID：254901679，欢迎加好友。<br/>
+原神UID：254901679，欢迎加好友。文档记录于个人[网站]( https://blog.xushufa.cn )，欢迎浏览。<br/>
 --20221124
 
 
@@ -20,6 +19,9 @@
 原神 旅行者 [米游社]( https://bbs.mihoyo.com/ys/ )
 
 提瓦特  蒙德  璃月 岩层巨渊   稻妻  须弥
+
+班尼特 芭芭拉 丽莎 香菱 安柏 凝光 提纳里 雷神 
+
 
 
 ### 2.1、日志
@@ -100,6 +102,26 @@ https://bbs.mihoyo.com/ys/article/30600790   <br/>
 屏风【松木折屏-云来帆影】需要松木，在蒙德靠近凯瑟琳的传送点有三处松木，循环砍伐。 <br/>
 --20221129
 
+---
+
+9.六星战神 绝缘本 雷神国家队
+
+昨天冒险等级达到50级，突破任务也成功了，世界等级达到7级。 <br/>
+目前使用的人物跟一个月前差别不大：<br/>
+班尼特：宗室套 生命充能治疗  当前81级  西风剑 <br/>
+芭芭拉：少女圣遗物  生命治疗 80级  试作金珀 <br/>
+香菱： 2绝缘2角斗  充能双暴 80级  鱼获 <br/>
+丽莎：元素精通   80级 魔导绪论  <br/>
+
+班尼特六星战神名不虚传，补血增伤，确实厉害。芭芭拉辅助奶妈补血恢复非常给力。 <br/>
+香菱锅巴喷火、后台挂火伤害可观。丽莎，堆元素精通点按e，1秒冷却打反应相当好用。 <br/>
+
+尘歌壶也到了9级，兑换须臾数值、经验值、精锻晶石等相当不错。 <br/>
+xp党指喜欢、偏爱，外貌协会。雷神既是xp党也是强度党。 <br/>
+
+现在在攒原石，等12.27号3.3版本下半场雷神复刻。同时收集材料：雷音权现的雷云庭珠，最胜紫晶、名刀镡、天云草实。技能天赋材料：「天光」的哲学、溶毁之刻、名刀镡、智识之冕。 <br/>
+小保底90抽之前歪了，大保底90抽没问题了。抽到雷神的话，看看能否有行秋，和班尼特香菱组成雷神国家队。 <br/>
+--20221219
 
 
 
@@ -128,6 +150,93 @@ https://bbs.mihoyo.com/ys/article/30600790   <br/>
 
 以上纯属个人感想，若有错误，欢迎指正。 <br/>
 --20221124
+
+
+
+### 2.3、雷神
+
+[雷电将军]( https://bbs.mihoyo.com/ys/obc/content/2404/detail )  梦想一心  快到碗里来 <br/>
+雷电将军，5星雷系长柄武器角色。其名为「雷电影」，魔神名讳为「巴尔泽布」，雷电将军只是称谓。前任雷电将军「雷电真」·巴尔与现任雷电将军「雷电影」·巴尔泽布是双生魔神，「真」在数百年前的战争中逝世，「影」便来到了幕前。许诺稻妻臣民“千世万代不变不移的永恒”，然而自己却在「永恒」里迷失··· <br/>
+
+ <br/>
+
+> 圣遗物
+
+冒险等级45级之后就可以在**椛染之庭**刷绝缘套  <br/>
+雷神毕业面板：60/180/270(暴击/暴伤/充能)   <br/>
+雷神毕业面板参考：充能270+，双暴70-160(大毕业)，双暴65-120(小毕业)  <br/>
+
+雷神的[绝缘之旗印]( https://bbs.mihoyo.com/ys/obc/content/2322/detail )圣遗物参考：  <br/>
+主词条：花-生命，羽-攻击，沙-充能，杯-雷伤，冠-双暴。 **充能沙**，**雷伤杯**。  <br/>
+副词条：只要暴击暴伤充能攻击力，不要防御生命值元素精通。  <br/>
+
+生之花：明威之镡--生命值。  <br/>
+死之羽：切落之羽--攻击力。  <br/>
+时之沙：雷云之笼--元素充能效率。  <br/>
+空之杯：涌泉之盏--雷元素伤害加成或攻击力。  <br/>
+理之冠：华饰之兜--暴击率或暴击伤害。  <br/>
+--20221219
+
+ <br/>
+
+> 专武命座
+
+雷神大毕业状态**专武命座**伤害提升比较巨大，测算数据来自于[原神伤害计算]( https://genshin-calc.sirokuma.cc/ ) 。<br/>
+以下是雷电将军满级大毕业，天赋10、等级90、暴击60、暴伤170、充能270的暴击伤害：  <br/>
+
+| 等级 |  武器  	 |  命座  |  暴击伤害 |  提升比例       | 
+| ---  | ----------- |  ----  | --------- |  -------------- |
+| 90   |  [鱼获]( https://bbs.mihoyo.com/ys/obc/content/2604/detail )  	 |  0	  |  20103    |  --             |  
+| 90   |  鱼获  	 |  2	  |  28718	  |  +8615（43%）   |  
+| 90   |  [薙草之稻光]( https://bbs.mihoyo.com/ys/obc/content/2602/detail ) |  0	  |  30133	  |  +10030（50%）  |  
+| 90   |  薙草之稻光 |  2	  |  43047	  |  +22944（141%） |  
+
+
+综上雷神专武命座对伤害提升显著：专武提升50%；专武加命座简直起飞了，可提升141%。 <br/>
+--20221221
+
+ <br/>
+
+> 材料
+
+雷神等级培养材料包括摩拉2092530，天云草实168，大英雄经验419，最胜紫晶碎屑1、断片9、晶块9、紫晶6，刀镡系列18、30、36，[雷霆数珠]( https://bbs.mihoyo.com/ys/obc/content/2615/detail )46，天赋材料包括摩拉4957500，王冠3，天光系列9、63、114，刀镡系列18、66、93，熔毁之刻18。
+
+ <br/>
+
+雷电将军**等级突破** LV1-90 所需材料: <br/>
+最胜紫晶碎屑×1 破旧的刀镡×18 雷霆数珠×46  <br/>
+最胜紫晶断片×9 影打刀镡×30 天云草实×168  <br/>
+最胜紫晶块×9 名刀镡×36 摩拉×420000  <br/>
+最胜紫晶×6  <br/>
+
+
+20级：最胜紫晶碎屑*1+天云草实*3+破旧的刀镡*3+2万摩拉  <br/>
+40级：最胜紫晶断片*3+雷霆数珠*2+天云草实*10+破旧的刀镡*15+4万摩拉  <br/>
+50级：最胜紫晶断片*6+雷霆数珠*4+天云草实*20+影打刀镡*12+6万摩拉  <br/>
+60级：最胜紫晶块*3+雷霆数珠*8+天云草实*30+影打刀镡*18+8万摩拉  <br/>
+70级：最胜紫晶块*6+雷霆数珠*12+天云草实*45+名刀镡*12+10万摩拉  <br/>
+80级：最胜紫晶*6+雷霆数珠*20+天云草实*60+名刀镡*24+12万摩拉  <br/>
+
+<br/>
+
+
+雷电将军**天赋突破** LV1-10 所需材料: <br/>
+天光的教导×3 破旧的刀镡×6 女士掉落材料×6  <br/>
+天光的指引×21 影打刀镡×22 智识之冕×1  <br/>
+天光的哲学×38 名刀镡×31 摩拉×1652500  <br/>
+
+
+2级：天光的教导*3+破旧的刀镡*6  <br/>
+3级：天光的指引*2+影打刀镡*3  <br/>
+4级：天光的指引*4+影打刀镡*4  <br/>
+5级：天光的指引*6+影打刀镡*6  <br/>
+6级：天光的指引*9+影打刀镡*9  <br/>
+7级：天光的哲学*4+名刀镡*4+熔毁之刻*1  <br/>
+8级：天光的哲学*6+名刀镡*6+熔毁之刻*1  <br/>
+9级：天光的哲学*12+名刀镡*9+熔毁之刻*2  <br/>
+10级：天光的哲学*16+名刀镡*6+智识之冕*1+熔毁之刻*2  <br/>
+
+
 
 
 
