--- a/docs/生活/随笔/我的原神旅行观测记录.md
+++ b/docs/生活/随笔/我的原神旅行观测记录.md
@@ -250,7 +250,7 @@ xp党指喜欢、偏爱，外貌协会。雷神既是xp党也是强度党。 <br
 
 
 
-```mermaid
+<mermaid>
 graph TD
 雷 --> | 感电 | 水;
 雷 --> | 超载 | 火;
@@ -270,7 +270,7 @@ graph TD
 冰 --> | 超导 | 雷;
 冰 --> | 冻结 | 水;
 
-```
+</mermaid>
 
 ---
 
@@ -280,7 +280,7 @@ graph TD
 
 
 
-```mermaid
+<mermaid>
 graph LR
 元素反应 --> A1[增伤类]
 元素反应 --> B1[额外伤害类]
@@ -315,7 +315,7 @@ C121--> C1211[结晶盾承受量仅与等级及元素精通有关]
 D11--> D121[水草]
 D12--> D122[水冰]
 
-```
+</mermaid>
 
 - 元素反应的伤害均与触发角色的元素精通有着密切的联系。
 - 超载的群体伤害最高。感电的单体伤害最高。
