--- a/docs/生活/随笔/我的原神旅行观测记录.md
+++ b/docs/生活/随笔/我的原神旅行观测记录.md
@@ -1,27 +1,27 @@
 # 我的原神旅行观测记录
 
 
-
 ## 1、说明
 
-《我的原神旅行观测记录》，又名《原神之旅》，记之以事，述之以情。<br/>
+《我的原神旅行观测记录》，又名《[原神之旅]( https://blog.xushufa.cn/%E7%94%9F%E6%B4%BB/%E9%9A%8F%E7%AC%94/%E6%88%91%E7%9A%84%E5%8E%9F%E7%A5%9E%E6%97%85%E8%A1%8C%E8%A7%82%E6%B5%8B%E8%AE%B0%E5%BD%95.html )》，记之以事，述之以情。<br/>
 自二零二二年十一月初开始下载原神，第一次玩这款全球知名游戏。安装包300多兆，但是装好后还要下载18g的资源，确实很大。<br/>
 之前只玩过功能比较简单、内容相对单一的游戏，像qq农场、部落冲突、天天酷跑、和平精英等等。<br/>
 世界规模如此巨大，内容剧情如此精彩，画面色彩如此绚丽的游戏还是首次接触。<br/>
 想不到一接触就入迷了，一入迷难以自拔，故此记录，以作旅行感想。<br/>
-原神UID：254901679，欢迎加好友。文档记录于个人[网站]( https://blog.xushufa.cn )，欢迎浏览。<br/>
+原神UID：254901679，欢迎加好友。文档记录于个人[网站]( https://web.xushufa.cn )，欢迎浏览。<br/>
 --20221124
 
-
+<br/>
 
 ## 2、旅行笔记
 
 原神 旅行者 [米游社]( https://bbs.mihoyo.com/ys/ )
 
-提瓦特  蒙德  璃月 岩层巨渊   稻妻  须弥
+提瓦特  蒙德  璃月 层岩巨渊   稻妻  须弥
 
-班尼特 芭芭拉 丽莎 香菱 安柏 凝光 提纳里 雷神 
+班尼特 芭芭拉 丽莎 香菱 安柏 凯亚 凝光 提纳里 雷电将军
 
+<br/>
 
 
 ### 2.1、日志
@@ -32,13 +32,18 @@
 2.蒙德城外的四庙遗址，去下一关有一道天堑需要飞过去。需要切换安柏长按火箭，射击石像，才有一片云雾，飘过天堑。   <br/>
 --20221103
 
+- [ ] 此时完全是啥都不懂的萌新，操作不太懂，机制不明白，地图不熟悉，人物不了解。点按长按e技能q技能分不清。基本用刀枪剑戟劈砍怪物，伤害不过百。--20221222
+
+<br/>
 
 3.打火姬安柏30秒内点燃火炬并打开宝箱，手残党，一直失败。   <br/>
 4.南风之狮的庙宇20秒杀死一个小怪，限制时间内清光所有怪物。冒险等级19级，角色等级30左右。只有丽莎有一战之力，但是技术还是不行，一直失败。   <br/>
 旅行者，安柏，凯亚，丽莎。   <br/>
 --20221109
 
+- [ ] 此时玩了半个月，米游社都不太知道，攻略在网上随便查，打怪基本凭攻击力造成过百伤害，简称：刮痧。--20221222
 
+<br/>
 
 > 角色搭配
 
@@ -49,7 +54,9 @@
 冒险等级29级，最高角色等级49左右。   <br/>
 --20221116
 
+- [ ] 凝光在前期确实比较好用，尤其面对有盾的怪物。班尼特芭芭拉yyds，非常给力。--20221222
 
+<br/>
 
 > 元素反应
 
@@ -59,7 +66,9 @@ https://bbs.mihoyo.com/ys/article/29312495   <br/>
 https://bbs.mihoyo.com/ys/article/30600790   <br/>
 --20221118
 
+- [ ] 了解元素反应才算是原神打怪入门进阶了。--20221222
 
+<br/>
 
 7.打元素反应 升等级  武器   圣遗物   
 
@@ -70,6 +79,7 @@ https://bbs.mihoyo.com/ys/article/30600790   <br/>
 感电超载燃烧超绽放元素融合   <br/>
 
 注意使用尘歌壶   <br/>
+e技能--元素战技  q技能--元素爆发   <br/>
 --20221122
 
 完成反雷电将军特训  简直就是 反旅行者特训   <br/>
@@ -77,6 +87,8 @@ https://bbs.mihoyo.com/ys/article/30600790   <br/>
 --20221124
 
 ---
+
+<br/>
 
 8.冒险等级 世界等级 尘歌壶
 
@@ -104,6 +116,8 @@ https://bbs.mihoyo.com/ys/article/30600790   <br/>
 
 ---
 
+<br/>
+
 9.六星战神 绝缘本 雷神国家队
 
 昨天冒险等级达到50级，突破任务也成功了，世界等级达到7级。 <br/>
@@ -123,7 +137,7 @@ xp党指喜欢、偏爱，外貌协会。雷神既是xp党也是强度党。 <br
 小保底90抽之前歪了，大保底90抽没问题了。抽到雷神的话，看看能否有行秋，和班尼特香菱组成雷神国家队。 <br/>
 --20221219
 
-
+<br/>
 
 ### 2.2、感想
 
@@ -151,14 +165,24 @@ xp党指喜欢、偏爱，外貌协会。雷神既是xp党也是强度党。 <br
 以上纯属个人感想，若有错误，欢迎指正。 <br/>
 --20221124
 
+<br/>
+
+原神是一款追求强度的游戏，也是旅游休闲的游戏。 <br/>
+蒙德的星空，璃月的日出，稻妻的黄昏，须弥的森林都是行程中美丽的风景。 <br/>
+人生是在不停的赶路，但是慢下来也许会有不一样的感受。 <br/>
+--20221222
+
+<br/>
+
+## 3、观测枢
 
 
-### 2.3、雷神
+### 3.1、雷神
 
 [雷电将军]( https://bbs.mihoyo.com/ys/obc/content/2404/detail )  梦想一心  快到碗里来 <br/>
 雷电将军，5星雷系长柄武器角色。其名为「雷电影」，魔神名讳为「巴尔泽布」，雷电将军只是称谓。前任雷电将军「雷电真」·巴尔与现任雷电将军「雷电影」·巴尔泽布是双生魔神，「真」在数百年前的战争中逝世，「影」便来到了幕前。许诺稻妻臣民“千世万代不变不移的永恒”，然而自己却在「永恒」里迷失··· <br/>
 
- <br/>
+<br/>
 
 > 圣遗物
 
@@ -177,7 +201,7 @@ xp党指喜欢、偏爱，外貌协会。雷神既是xp党也是强度党。 <br
 理之冠：华饰之兜--暴击率或暴击伤害。  <br/>
 --20221219
 
- <br/>
+<br/>
 
 > 专武命座
 
@@ -195,11 +219,11 @@ xp党指喜欢、偏爱，外貌协会。雷神既是xp党也是强度党。 <br
 综上雷神专武命座对伤害提升显著：专武提升50%；专武加命座简直起飞了，可提升141%。 <br/>
 --20221221
 
- <br/>
+<br/>
 
 > 材料
 
-雷神等级培养材料包括摩拉2092530，天云草实168，大英雄经验419，最胜紫晶碎屑1、断片9、晶块9、紫晶6，刀镡系列18、30、36，[雷霆数珠]( https://bbs.mihoyo.com/ys/obc/content/2615/detail )46，天赋材料包括摩拉4957500，王冠3，天光系列9、63、114，刀镡系列18、66、93，熔毁之刻18。
+雷神等级培养材料包括摩拉2092530，天云草实168，大英雄经验419，最胜紫晶碎屑1、断片9、晶块9、紫晶6，刀镡系列18、30、36，[雷霆数珠]( https://bbs.mihoyo.com/ys/obc/content/2615/detail )46，三种天赋材料总计包括摩拉4957500，智识之冕3，天光系列9、63、114，刀镡系列18、66、93，熔毁之刻18。
 
  <br/>
 
@@ -210,45 +234,45 @@ xp党指喜欢、偏爱，外貌协会。雷神既是xp党也是强度党。 <br
 最胜紫晶×6  <br/>
 
 
-20级：最胜紫晶碎屑*1+天云草实*3+破旧的刀镡*3+2万摩拉  <br/>
-40级：最胜紫晶断片*3+雷霆数珠*2+天云草实*10+破旧的刀镡*15+4万摩拉  <br/>
-50级：最胜紫晶断片*6+雷霆数珠*4+天云草实*20+影打刀镡*12+6万摩拉  <br/>
-60级：最胜紫晶块*3+雷霆数珠*8+天云草实*30+影打刀镡*18+8万摩拉  <br/>
-70级：最胜紫晶块*6+雷霆数珠*12+天云草实*45+名刀镡*12+10万摩拉  <br/>
-80级：最胜紫晶*6+雷霆数珠*20+天云草实*60+名刀镡*24+12万摩拉  <br/>
+20级：最胜紫晶碎屑x1+天云草实x3+破旧的刀镡x3+2万摩拉  <br/>
+40级：最胜紫晶断片x3+雷霆数珠x2+天云草实x10+破旧的刀镡x15+4万摩拉  <br/>
+50级：最胜紫晶断片x6+雷霆数珠x4+天云草实x20+影打刀镡x12+6万摩拉  <br/>
+60级：最胜紫晶块x3+雷霆数珠x8+天云草实x30+影打刀镡x18+8万摩拉  <br/>
+70级：最胜紫晶块x6+雷霆数珠x12+天云草实x45+名刀镡x12+10万摩拉  <br/>
+80级：最胜紫晶x6+雷霆数珠x20+天云草实x60+名刀镡x24+12万摩拉  <br/>
 
 <br/>
 
 
 雷电将军**天赋突破** LV1-10 所需材料: <br/>
-天光的教导×3 破旧的刀镡×6 女士掉落材料×6  <br/>
+天光的教导×3 破旧的刀镡×6 熔毁之刻×6  <br/>
 天光的指引×21 影打刀镡×22 智识之冕×1  <br/>
 天光的哲学×38 名刀镡×31 摩拉×1652500  <br/>
 
 
-2级：天光的教导*3+破旧的刀镡*6  <br/>
-3级：天光的指引*2+影打刀镡*3  <br/>
-4级：天光的指引*4+影打刀镡*4  <br/>
-5级：天光的指引*6+影打刀镡*6  <br/>
-6级：天光的指引*9+影打刀镡*9  <br/>
-7级：天光的哲学*4+名刀镡*4+熔毁之刻*1  <br/>
-8级：天光的哲学*6+名刀镡*6+熔毁之刻*1  <br/>
-9级：天光的哲学*12+名刀镡*9+熔毁之刻*2  <br/>
-10级：天光的哲学*16+名刀镡*6+智识之冕*1+熔毁之刻*2  <br/>
+2级：天光的教导x3+破旧的刀镡x6  <br/>
+3级：天光的指引x2+影打刀镡x3  <br/>
+4级：天光的指引x4+影打刀镡x4  <br/>
+5级：天光的指引x6+影打刀镡x6  <br/>
+6级：天光的指引x9+影打刀镡x9  <br/>
+7级：天光的哲学x4+名刀镡x4+熔毁之刻x1  <br/>
+8级：天光的哲学x6+名刀镡x6+熔毁之刻x1  <br/>
+9级：天光的哲学x12+名刀镡x9+熔毁之刻x2  <br/>
+10级：天光的哲学x16+名刀镡x6+智识之冕x1+熔毁之刻x2  <br/>
 
 
 
 
+### 3.2、元素反应
 
-## 3、观测枢
-
-### 3.1、元素反应简图
-
-来自 https://bbs.mihoyo.com/ys/article/30600790
 
 火，水，风，雷，草，冰，岩   七种元素
 
 
+
+> 简图
+
+来自 https://bbs.mihoyo.com/ys/article/30600790
 
 <mermaid>
 graph TD
@@ -274,10 +298,56 @@ graph TD
 
 ---
 
-### 3.2、元素反应机制讲解
+<mermaid>
+graph LR
+元素反应 --> A1[增幅]
+元素反应 --> B1[剧变]
+元素反应 --> C1[激化]
+元素反应 --> D1[绽放]
+A1--> A11[蒸发]
+A1--> A12[融化]
+B1--> B11[超载]
+B1--> B12[感电]
+B1--> B13[冻结]
+B1--> B14[超导]
+B1--> B15[碎冰]
+B1--> B16[扩散]
+B1--> B17[结晶]
+B1--> B18[燃烧]
+C1--> C11[原激化]
+C1--> C12[超激化]
+C1--> C13[蔓激化]
+D1--> D11[绽放]
+D1--> D12[超绽放]
+D1--> D13[烈绽放]
+A11--> A121[火水]
+A12--> A122[火冰]
+B11--> B121[火雷]
+B12--> B122[雷水]
+B13--> B123[水冰]
+B14--> B124[冰雷]
+B15--> B125[冰]
+B16--> B126[风-火水冰雷]
+B17--> B127[岩-火水冰雷]
+B18--> B128[火草]
+C11--> C121[雷草]
+C12--> C122[雷草]
+C13--> C123[雷草]
+D11--> D121[草水]
+D12--> D122[草水雷]
+D13--> D123[草水火]
+
+</mermaid>
+
+- 三种元素，超绽放烈绽放伤害最高。
+
+<br/>
+
+<br/>
+
+> 机制讲解
 
 来自 https://bbs.mihoyo.com/ys/article/2050152
-
 
 
 <mermaid>
@@ -317,10 +387,8 @@ D12--> D122[水冰]
 
 </mermaid>
 
-- 元素反应的伤害均与触发角色的元素精通有着密切的联系。
-- 超载的群体伤害最高。感电的单体伤害最高。
-
-
+- 元素反应的伤害均与**触发角色**的**元素精通**有着密切的联系。
+- 两种元素，超载的群体伤害最高，感电的单体伤害最高。
 
 
 ---
