--- a/docs/生活/随笔/我的原神旅行观测记录.md
+++ b/docs/生活/随笔/我的原神旅行观测记录.md
@@ -261,9 +261,458 @@ xp党指喜欢、偏爱，外貌协会。雷神既是xp党也是强度党。 <br
 10级：天光的哲学x16+名刀镡x6+智识之冕x1+熔毁之刻x2  <br/>
 
 
+<br/>
+
+### 3.2、圣遗物
+
+> 圣遗物各部位主副词条属性详解
 
 
-### 3.2、元素反应
+主词条:   <br/>
+**生之花**和**死之羽**为固定主词条，花是小生命，羽是小攻击。  <br/>
+
+**时之沙**，共5种主词条，大攻击，大防御，大生命，元素充能效率(简称充能)，元素精通(简称精通)。  <br/>
+**空之杯**，共12种主词条，各元素伤害加成(水，火，风，岩，草，冰，雷)，物理伤害加成，精通，大攻击，大生命，大防御。  <br/>
+**理之冠**，共7种主词条，暴击率(简称爆率)，暴击伤害(简称爆伤)，精通，大攻击，大生命，大防御，治疗加成。  <br/>
+
+副词条(除生之花没有小生命，死之羽没有小攻击外，各部位均相同):大小生命攻击防御，充能，精通，爆伤，爆率。  <br/>
+
+<br/>
+
+① 每个圣遗物(以五星为例)的初始副词条(0级)最少有**三个**，最多有**四个**。  <br/>
+② 在圣遗物的副词条未达到四个之前，升级副词条自动转化为新添一个副词条效果。  <br/>
+③ 一件圣遗物的副词条、主词条以及后面新添的副词条都**不会出现重复**(百分比数值的生命俗称大生命，具体数值的生命俗称小生命，大小生命也属于不同的副词条，攻击防御同理)。  <br/>
+④ 在圣遗物达到四个副词条过之后，每到**4 8 12 16 20**级的时候就会随机增加一个副词条的数值。  <br/>
+
+
+
+<br/>
+  
+> 圣遗物副词条每次强化值
+
+| 属性     | 每次强化值 |        |       |      | 
+| -------- | ----------- |  ----  | ---- |  ---- |
+| 暴击率   |  2.7%  	 |  3.1%  | 3.5% | 3.9%  |
+| 暴伤     |  5.4%  	 |  6.2%  | 7.0% | 7.8%  |
+| 攻击比   |  4.1%  	 |  4.7%  | 5.3% | 5.8%  |
+| 攻击力   |  14    	 |  16    | 18   | 19    |
+| 生命比   |  4.1%  	 |  4.7%  | 5.3% | 5.8%  |
+| 生命值   |  209   	 |  239   | 269  | 299   |
+| 防御比   |  5.1%  	 |  5.8%  | 6.6% | 7.3%  |
+| 防御值   |  16    	 |  19    | 21   | 23    |
+| 元素精通 |  16    	 |  19    | 21   | 23    |
+| 充能效率 |  4.5%  	 |  5.2%  | 5.8% | 6.5%  |
+
+
+<br/>
+
+
+### 3.3、天赋书
+
+
+一共有三个战斗天赋可升级：  普通攻击(A)  /  元素战技(E)  /  元素爆发(Q)  <br/>
+只是升级一个战斗天赋，例如普通攻击(A)  所需数量： <br/>
+1-2级：教导(绿色天赋书)×3   <br/>
+2-3级：指引(蓝色天赋书)×2   <br/>
+3-4级：指引(蓝色天赋书)×4   <br/>
+4-5级：指引(蓝色天赋书)×6   <br/>
+5-6级：指引(蓝色天赋书)×9   <br/>
+6-7级：哲学(紫色天赋书)×4   <br/>
+7-8级：哲学(紫色天赋书)×6   <br/>
+8-9级：哲学(紫色天赋书)×12  <br/>
+9-10级：哲学(紫色天赋书)×16 <br/>
+
+一个战斗天赋升级总计：<br/>
+教导(绿色天赋书)×3 + 指引(蓝色天赋书)×21 + 哲学(紫色天赋书)×38 <br/>
+
+
+三个战斗天赋一起升级，普通攻击(A) + 元素战技(E) + 元素爆发(Q) 总计所需数量：<br/>
+教导(绿色天赋书)×9 + 指引(蓝色天赋书)×63 + 哲学(紫色天赋书)×114 <br/>
+
+<br/>
+ 
+---
+
+ <table width="576" border="0" cellpadding="0" cellspacing="0">
+   <col width="72" span="8" style='width:54.00pt;'/>
+   	<tr>
+	    <th colspan="8">角色天赋升级需求</th>
+	</tr>
+   <tr height="18" >
+    <td class="xl65" height="36" width="72" rowspan="2" x:str>天赋等级</td>
+    <td class="xl65" width="216" colspan="3" x:str>上一级到这一级需要</td>
+    <td class="xl65" width="216" colspan="3" x:str>第一级到这一级共需要</td>
+    <td class="xl65" width="72" rowspan="2"  x:str>备注</td>
+   </tr>
+   <tr height="18" >
+    <td class="xl68" x:str>教导</td>
+    <td class="xl68" x:str>指引</td>
+    <td class="xl68" x:str>哲学</td>
+    <td class="xl68" x:str>教导</td>
+    <td class="xl68" x:str>指引</td>
+    <td class="xl68" x:str>哲学</td>
+   </tr>
+   <tr height="18" >
+    <td class="xl69" height="18"  x:str>2级</td>
+    <td class="xl70" align="center" x:num>3</td>
+    <td class="xl69"></td>
+    <td class="xl69"></td>
+    <td class="xl70" align="center" x:num>3</td>
+    <td class="xl69"></td>
+    <td class="xl69"></td>
+    <td class="xl69"></td>
+   </tr>
+   <tr height="18" >
+    <td class="xl69" height="18"  x:str>3级</td>
+    <td class="xl69"></td>
+    <td class="xl71" align="center" x:num>2</td>
+    <td class="xl69"></td>
+    <td class="xl70" align="center" x:num>3</td>
+    <td class="xl71" align="center" x:num>2</td>
+    <td class="xl69"></td>
+    <td class="xl69"></td>
+   </tr>
+   <tr height="18" >
+    <td class="xl69" height="18"  x:str>4级</td>
+    <td class="xl69"></td>
+    <td class="xl71" align="center" x:num>4</td>
+    <td class="xl69"></td>
+    <td class="xl70" align="center" x:num>3</td>
+    <td class="xl71" align="center" x:num>6</td>
+    <td class="xl69"></td>
+    <td class="xl69"></td>
+   </tr>
+   <tr height="18" >
+    <td class="xl69" height="18"  x:str>5级</td>
+    <td class="xl69"></td>
+    <td class="xl71" align="center" x:num>6</td>
+    <td class="xl69"></td>
+    <td class="xl70" align="center" x:num>3</td>
+    <td class="xl71" align="center" x:num>12</td>
+    <td class="xl69"></td>
+    <td class="xl69"></td>
+   </tr>
+   <tr height="18" >
+    <td class="xl69" height="18"  x:str>6级</td>
+    <td class="xl69"></td>
+    <td class="xl71" align="center" x:num>9</td>
+    <td class="xl69"></td>
+    <td class="xl70" align="center" x:num>3</td>
+    <td class="xl71" align="center" x:num>21</td>
+    <td class="xl69"></td>
+    <td class="xl69"></td>
+   </tr>
+   <tr height="18" >
+    <td class="xl69" height="18"  x:str>7级</td>
+    <td class="xl69"></td>
+    <td class="xl69"></td>
+    <td class="xl72" align="center" x:num>4</td>
+    <td class="xl70" align="center" x:num>3</td>
+    <td class="xl71" align="center" x:num>21</td>
+    <td class="xl72" align="center" x:num>4</td>
+    <td class="xl73" rowspan="3" x:str>周本材料</td>
+   </tr>
+   <tr height="18" >
+    <td class="xl69" height="18"  x:str>8级</td>
+    <td class="xl69"></td>
+    <td class="xl69"></td>
+    <td class="xl72" align="center" x:num>6</td>
+    <td class="xl70" align="center" x:num>3</td>
+    <td class="xl71" align="center" x:num>21</td>
+    <td class="xl72" align="center" x:num>10</td>
+   </tr>
+   <tr height="18" >
+    <td class="xl69" height="18"  x:str>9级</td>
+    <td class="xl69"></td>
+    <td class="xl69"></td>
+    <td class="xl72" align="center" x:num>12</td>
+    <td class="xl70" align="center" x:num>3</td>
+    <td class="xl71" align="center" x:num>21</td>
+    <td class="xl72" align="center" x:num>22</td>
+   </tr>
+   <tr height="18" >
+    <td class="xl69" height="18"  x:str>10级</td>
+    <td class="xl69"></td>
+    <td class="xl69"></td>
+    <td class="xl72" align="center" x:num>16</td>
+    <td class="xl70" align="center" x:num>3</td>
+    <td class="xl71" align="center" x:num>21</td>
+    <td class="xl72" align="center" x:num>38</td>
+    <td class="xl69" x:str>皇冠</td>
+   </tr>
+  </table>
+  
+  
+<br/>
+
+---
+
+<table>
+   <col width="72" span="5" />
+   <tr>
+	    <th colspan="5">蒙德天赋本-<a href="https://bbs.mihoyo.com/ys/obc/content/292/detail" target="_blank">忘却之峡</a></th>
+   </tr>
+   <tr height="18" style='height:13.50pt;'>
+    <td class="xl65" height="18" style='height:13.50pt;' x:str>怪物</td>
+    <td class="xl66" colspan="4" x:str>冰史莱姆、冰深渊法师，共三波怪</td>
+   </tr>
+   <tr height="18" style='height:13.50pt;'>
+    <td class="xl69" height="18" style='height:13.50pt;' x:str>时间</td>
+    <td class="xl69" x:str>周一周四</td>
+    <td class="xl69" x:str>周二周五</td>
+    <td class="xl69" x:str>周三周六</td>
+    <td class="xl69" x:str>周日</td>
+   </tr>
+   <tr height="18" style='height:13.50pt;'>
+    <td class="xl65" height="18" style='height:13.50pt;' x:str>名称</td>
+    <td class="xl65" x:str>霜凝祭坛</td>
+    <td class="xl65" x:str>冰封废渊</td>
+    <td class="xl65" x:str>沉睡之国</td>
+    <td class="xl65" x:str>全部</td>
+   </tr>
+   <tr height="18" style='height:13.50pt;'>
+    <td class="xl69" height="18" style='height:13.50pt;' x:str>天赋</td>
+    <td class="xl69" style='font-weight:bold;' x:str>自由</td>
+    <td class="xl69" style='font-weight:bold;' x:str><a href="https://bbs.mihoyo.com/ys/obc/content/824/detail" target="_blank">抗争</a></td>
+    <td class="xl69" style='font-weight:bold;' x:str>诗文</td>
+    <td class="xl70" rowspan="8" x:str>全部</td>
+   </tr>
+   <tr height="18" style='height:13.50pt;'>
+    <td class="xl70" height="126" rowspan="7" x:str>适配角色</td>
+    <td class="xl65" x:str>安柏</td>
+    <th class="xl65" style='text-align:left;' x:str>班尼特</th>
+    <td class="xl65" x:str>阿贝多</td>
+   </tr>
+   <tr height="18" style='height:13.50pt;'>
+    <td class="xl65" x:str>芭芭拉</td>
+    <td class="xl65" x:str>迪卢克</td>
+    <td class="xl65" x:str>菲谢尔</td>
+   </tr>
+   <tr height="18" style='height:13.50pt;'>
+    <td class="xl65" x:str>达达利亚</td>
+    <td class="xl65" x:str>雷泽</td>
+    <td class="xl65" x:str>凯亚</td>
+   </tr>
+   <tr height="18" style='height:13.50pt;'>
+    <td class="xl65" x:str>迪奥娜</td>
+    <td class="xl65" x:str>莫娜</td>
+    <td class="xl65" x:str>丽莎</td>
+   </tr>
+   <tr height="18" style='height:13.50pt;'>
+    <td class="xl65" x:str>可莉</td>
+    <td class="xl65" x:str>诺艾尔</td>
+    <td class="xl65" x:str>罗莎莉亚</td>
+   </tr>
+   <tr height="18" style='height:13.50pt;'>
+    <td class="xl65" x:str>砂糖</td>
+    <td class="xl65" x:str>琴</td>
+    <td class="xl65" x:str>温迪</td>
+   </tr>
+   <tr height="18" style='height:13.50pt;'>
+    <td class="xl65" x:str>埃洛伊</td>
+    <td class="xl65" x:str>优菈</td>
+    <td class="xl65"></td>
+   </tr>
+   <![if supportMisalignedColumns]>
+    <tr width="0" style='display:none;'/>
+   <![endif]>
+  </table>
+
+  
+<br/>
+
+---
+
+<table>
+   <col width="72" span="5" />
+   <tr>
+	    <th colspan="5">璃月天赋本-<a href="https://bbs.mihoyo.com/ys/obc/content/324/detail" target="_blank">太山府</a></th>
+   </tr>
+   <tr height="18" style='height:13.50pt;'>
+    <td class="xl65" height="18" x:str>怪物</td>
+    <td class="xl65" colspan="4" x:str>火斧丘丘暴徒、火债务处理人，共两波怪</td>
+   </tr>
+   <tr height="18" style='height:13.50pt;'>
+    <td class="xl69" height="18" style='height:13.50pt;' x:str>时间</td>
+    <td class="xl69" x:str>周一周四</td>
+    <td class="xl69" x:str>周二周五</td>
+    <td class="xl69" x:str>周三周六</td>
+    <td class="xl69" x:str>周日</td>
+   </tr>
+   <tr height="18" style='height:13.50pt;'>
+    <td class="xl65" height="18" style='height:13.50pt;' x:str>名称</td>
+    <td class="xl65" x:str>炽炎祭场</td>
+    <td class="xl65" x:str>深炎之底</td>
+    <td class="xl65" x:str>焚尽之环</td>
+    <td class="xl65" x:str>全部</td>
+   </tr>
+   <tr height="18" style='height:13.50pt;'>
+    <td class="xl67" height="18" style='height:13.50pt;' x:str>天赋</td>
+    <td class="xl67" style='font-weight:bold;' x:str>繁荣</td>
+    <td class="xl67" style='font-weight:bold;' x:str>勤劳</td>
+    <td class="xl67" style='font-weight:bold;' x:str>黄金</td>
+    <td class="xl65" rowspan="7" x:str>全部</td>
+   </tr>
+   <tr height="18" style='height:13.50pt;'>
+    <td class="xl70" height="108" rowspan="6" x:str>适配角色</td>
+    <td class="xl65" x:str>刻晴</td>
+    <td class="xl65" x:str>枫原万叶</td>
+    <td class="xl65" x:str>北斗</td>
+   </tr>
+   <tr height="18" style='height:13.50pt;'>
+    <td class="xl65" x:str>凝光</td>
+    <td class="xl65" x:str>甘雨</td>
+    <td class="xl65" x:str>辛焱</td>
+   </tr>
+   <tr height="18" style='height:13.50pt;'>
+    <td class="xl65" x:str>七七</td>
+    <td class="xl65" x:str>胡桃</td>
+    <td class="xl65" x:str>行秋</td>
+   </tr>
+   <tr height="18" style='height:13.50pt;'>
+    <td class="xl65" x:str>申鹤</td>
+    <th class="xl65" style='text-align:left;' x:str>香菱</th>
+    <td class="xl65" x:str>烟绯</td>
+   </tr>
+   <tr height="18" style='height:13.50pt;'>
+    <td class="xl65" x:str>魈</td>
+    <td class="xl65" x:str>云堇</td>
+    <td class="xl65" x:str>钟离</td>
+   </tr>
+   <tr height="18" style='height:13.50pt;'>
+    <td class="xl65"></td>
+    <td class="xl65" x:str>重云</td>
+    <td class="xl65"></td>
+   </tr>
+  </table>
+
+  
+<br/>
+ 
+---
+
+<table>
+   <col width="72" span="5" />
+   <tr>
+	    <th colspan="5">稻妻天赋本-<a href="https://bbs.mihoyo.com/ys/obc/content/2291/detail" target="_blank">堇色之庭</a></th>
+   </tr>
+   <tr height="18" style='height:13.50pt;'>
+    <td class="xl70" height="18" x:str>怪物</td>
+    <td class="xl65" colspan="4"  x:str>冰盗宝团、海乱鬼·雷腾-炎威，一波怪</td>
+   </tr>
+   <tr height="18" style='height:13.50pt;'>
+    <td class="xl69" height="18" style='height:13.50pt;' x:str>时间</td>
+    <td class="xl69" x:str>周一周四</td>
+    <td class="xl69" x:str>周二周五</td>
+    <td class="xl69" x:str>周三周六</td>
+    <td class="xl69" x:str>周日</td>
+   </tr>
+   <tr height="18" style='height:13.50pt;'>
+    <td class="xl65" height="18" style='height:13.50pt;' x:str>名称</td>
+    <td class="xl65" x:str>菫染之国</td>
+    <td class="xl65" x:str>初雷幽谷</td>
+    <td class="xl65" x:str>真葛废都</td>
+    <td class="xl65" x:str>全部</td>
+   </tr>
+   <tr height="18" style='height:13.50pt;'>
+    <td class="xl67" height="18" style='height:13.50pt;' x:str>天赋</td>
+    <td class="xl67" style='font-weight:bold;' x:str>浮世</td>
+    <td class="xl67" style='font-weight:bold;' x:str>风雅</td>
+    <td class="xl67" style='font-weight:bold;' x:str><a href="https://bbs.mihoyo.com/ys/obc/content/2313/detail" target="_blank">天光</a></td>
+    <td class="xl68" rowspan="5" x:str>全部</td>
+   </tr>
+   <tr height="18" style='height:13.50pt;'>
+    <td class="xl70" height="72" rowspan="4" x:str>适配角色</td>
+    <td class="xl65" x:str>珊瑚宮心海</td>
+    <td class="xl65" x:str>荒泷一斗</td>
+    <td class="xl65" x:str>八重神子</td>
+   </tr>
+   <tr height="18" style='height:13.50pt;'>
+    <td class="xl65" x:str>托马</td>
+    <td class="xl65" x:str>九条裟罗</td>
+    <th class="xl65" style='text-align:left;' x:str>雷电将军</th>
+   </tr>
+   <tr height="18" style='height:13.50pt;'>
+    <td class="xl65" x:str>宵宮</td>
+    <td class="xl65" x:str>神里绫华</td>
+    <td class="xl65" x:str>五郎</td>
+   </tr>
+   <tr height="18" style='height:13.50pt;'>
+    <td class="xl65"></td>
+    <td class="xl65" x:str>神里绫人</td>
+    <td class="xl65" x:str>早柚</td>
+   </tr>
+  </table>
+
+
+<br/>
+ 
+---
+  
+<table>
+   <col width="72" span="5" />
+   <tr>
+	    <th colspan="5">须弥天赋本-<a href="https://bbs.mihoyo.com/ys/obc/content/4469/detail" target="_blank">昏识塔</a></th>
+   </tr>
+   <tr height="18" style='height:13.50pt;'>
+    <td class="xl70" height="18" style='height:13.50pt;' x:str>怪物</td>
+    <td class="xl65" colspan="4" x:str>遗迹龙兽·地巡-空巡，一波怪</td>
+   </tr>
+   <tr height="18" style='height:13.50pt;'>
+    <td class="xl69" height="18" style='height:13.50pt;' x:str>时间</td>
+    <td class="xl69" x:str>周一周四</td>
+    <td class="xl69" x:str>周二周五</td>
+    <td class="xl69" x:str>周三周六</td>
+    <td class="xl69" x:str>周日</td>
+   </tr>
+   <tr height="18" style='height:13.50pt;'>
+    <td class="xl65" height="18" style='height:13.50pt;' x:str>名称</td>
+    <td class="xl65" x:str>圆镜</td>
+    <td class="xl65" x:str>妙语</td>
+    <td class="xl65" x:str>律藏</td>
+    <td class="xl65" x:str>全部</td>
+   </tr>
+   <tr height="18" style='height:13.50pt;'>
+    <td class="xl66" height="18" style='height:13.50pt;' x:str>天赋</td>
+    <td class="xl66" style='font-weight:bold;' x:str>诤言</td>
+    <td class="xl66" style='font-weight:bold;' x:str>巧思</td>
+    <td class="xl66" style='font-weight:bold;' x:str>笃行</td>
+    <td class="xl67" rowspan="5" x:str>全部</td>
+   </tr>
+   <tr height="18" style='height:13.50pt;'>
+    <td class="xl70" height="72" rowspan="4" x:str>适配角色</td>
+    <td class="xl65" x:str>珐露珊</td>
+    <th class="xl65" style='text-align:left;' x:str>纳西妲</th>
+    <td class="xl65" x:str>流浪者</td>
+   </tr>
+   <tr height="18" style='height:13.50pt;'>
+    <td class="xl65" x:str>赛诺</td>
+    <td class="xl65" x:str>多莉</td>
+    <td class="xl65" x:str>妮露</td>
+   </tr>
+   <tr height="18" style='height:13.50pt;'>
+    <td class="xl65" x:str>提纳里</td>
+    <td class="xl65" x:str>莱依拉</td>
+    <td class="xl65" x:str>柯莱</td>
+   </tr>
+   <tr height="18" style='height:13.50pt;'>
+    <td class="xl65" x:str>坎蒂丝</td>
+    <td class="xl65"></td>
+    <td class="xl65"></td>
+   </tr>
+   <![if supportMisalignedColumns]>
+    <tr width="0" style='display:none;'/>
+   <![endif]>
+  </table>
+
+<br/>
+
+---
+ 
+<br/>
+
+
+### 3.4、元素反应
 
 
 火，水，风，雷，草，冰，岩   七种元素
