--- a/docs/生活/随笔/我的原神旅行观测记录.md
+++ b/docs/生活/随笔/我的原神旅行观测记录.md
@@ -32,7 +32,7 @@
 2.蒙德城外的四庙遗址，去下一关有一道天堑需要飞过去。需要切换安柏长按火箭，射击石像，才有一片云雾，飘过天堑。   <br/>
 --20221103
 
-- [ ] 此时完全是啥都不懂的萌新，操作不太懂，机制不明白，地图不熟悉，人物不了解。点按长按e技能q技能分不清。基本用刀枪剑戟劈砍怪物，伤害不过百。--20221222
+- 此时完全是啥都不懂的萌新，操作不太懂，机制不明白，地图不熟悉，人物不了解。点按长按e技能q技能分不清。基本用刀枪剑戟劈砍怪物，伤害不过百。--20221222
 
 <br/>
 
@@ -41,7 +41,7 @@
 旅行者，安柏，凯亚，丽莎。   <br/>
 --20221109
 
-- [ ] 此时玩了半个月，米游社都不太知道，攻略在网上随便查，打怪基本凭攻击力造成过百伤害，简称：刮痧。--20221222
+- 此时玩了半个月，米游社都不太知道，攻略在网上随便查，打怪基本凭攻击力造成过百伤害，简称：刮痧。--20221222
 
 <br/>
 
@@ -54,7 +54,7 @@
 冒险等级29级，最高角色等级49左右。   <br/>
 --20221116
 
-- [ ] 凝光在前期确实比较好用，尤其面对有盾的怪物。班尼特芭芭拉yyds，非常给力。--20221222
+- 凝光在前期确实比较好用，尤其面对有盾的怪物。班尼特芭芭拉yyds，非常给力。--20221222
 
 <br/>
 
@@ -66,7 +66,7 @@ https://bbs.mihoyo.com/ys/article/29312495   <br/>
 https://bbs.mihoyo.com/ys/article/30600790   <br/>
 --20221118
 
-- [ ] 了解元素反应才算是原神打怪入门进阶了。--20221222
+- 了解元素反应才算是原神打怪入门进阶了。--20221222
 
 <br/>
 
@@ -184,46 +184,12 @@ xp党指喜欢、偏爱，外貌协会。雷神既是xp党也是强度党。 <br
 
 <br/>
 
-> 圣遗物
+> 升级材料
 
-冒险等级45级之后就可以在**椛染之庭**刷绝缘套  <br/>
-雷神毕业面板：60/180/270(暴击/暴伤/充能)   <br/>
-雷神毕业面板参考：充能270+，双暴70-160(大毕业)，双暴65-120(小毕业)  <br/>
-
-雷神的[绝缘之旗印]( https://bbs.mihoyo.com/ys/obc/content/2322/detail )圣遗物参考：  <br/>
-主词条：花-生命，羽-攻击，沙-充能，杯-雷伤，冠-双暴。 **充能沙**，**雷伤杯**。  <br/>
-副词条：只要暴击暴伤充能攻击力，不要防御生命值元素精通。  <br/>
-
-生之花：明威之镡--生命值。  <br/>
-死之羽：切落之羽--攻击力。  <br/>
-时之沙：雷云之笼--元素充能效率。  <br/>
-空之杯：涌泉之盏--雷元素伤害加成或攻击力。  <br/>
-理之冠：华饰之兜--暴击率或暴击伤害。  <br/>
---20221219
-
-<br/>
-
-> 专武命座
-
-雷神大毕业状态**专武命座**伤害提升比较巨大，测算数据来自于[原神伤害计算]( https://genshin-calc.sirokuma.cc/ ) 。<br/>
-以下是雷电将军满级大毕业，天赋10、等级90、暴击60、暴伤170、充能270的暴击伤害：  <br/>
-
-| 等级 |  武器  	 |  命座  |  暴击伤害 |  提升比例       | 
-| ---  | ----------- |  ----  | --------- |  -------------- |
-| 90   |  [鱼获]( https://bbs.mihoyo.com/ys/obc/content/2604/detail )  	 |  0	  |  20103    |  --             |  
-| 90   |  鱼获  	 |  2	  |  28718	  |  +8615（43%）   |  
-| 90   |  [薙草之稻光]( https://bbs.mihoyo.com/ys/obc/content/2602/detail ) |  0	  |  30133	  |  +10030（50%）  |  
-| 90   |  薙草之稻光 |  2	  |  43047	  |  +22944（141%） |  
-
-
-综上雷神专武命座对伤害提升显著：专武提升50%；专武加命座简直起飞了，可提升141%。 <br/>
---20221221
-
-<br/>
-
-> 材料
-
-雷神等级培养材料包括摩拉2092530，天云草实168，大英雄经验419，最胜紫晶碎屑1、断片9、晶块9、紫晶6，刀镡系列18、30、36，[雷霆数珠]( https://bbs.mihoyo.com/ys/obc/content/2615/detail )46，三种天赋材料总计包括摩拉4957500，智识之冕3，天光系列9、63、114，刀镡系列18、66、93，熔毁之刻18。
+雷神等级培养材料包括摩拉2092530，天云草实168，大英雄经验419，最胜紫晶碎屑1、断片9、晶块9、紫晶6，刀镡系列18、30、36，[雷霆数珠]( https://bbs.mihoyo.com/ys/obc/content/2615/detail )46。<br/>
+一种天赋材料需要摩拉1652500，智识之冕1，熔毁之刻6，天光系列（教导指引哲学）3、21、38，[刀镡]( https://www.baidu.com/s?wd=%E5%88%80%E9%95%A1%E6%98%AF%E5%BF%B5tan%E8%BF%98%E6%98%AFxin&rsv_spt=1&rsv_iqid=0xd7a925f4006833e8&issp=1&f=8&rsv_bp=1&rsv_idx=2&ie=utf-8&tn=baiduhome_pg&rsv_dl=tb&rsv_enter=0&rsv_n=2&rsv_btype=i&inputT=1427&rsv_sug4=1427 )系列（破旧影打名刀镡）6、22、31。<br/>
+三种天赋材料总计包括摩拉4957500，智识之冕3，熔毁之刻18，天光系列（教导指引哲学）9、63、114，刀镡系列（破旧影打名刀镡）18、66、93。<br/>
+性价比最高是1-9-10，普通天赋可以不升级，元素战技升到9级，元素爆发最好升到10级。
 
  <br/>
 
@@ -259,6 +225,45 @@ xp党指喜欢、偏爱，外貌协会。雷神既是xp党也是强度党。 <br
 8级：天光的哲学x6+名刀镡x6+熔毁之刻x1  <br/>
 9级：天光的哲学x12+名刀镡x9+熔毁之刻x2  <br/>
 10级：天光的哲学x16+名刀镡x6+智识之冕x1+熔毁之刻x2  <br/>
+
+<br/>
+
+> 圣遗物
+
+冒险等级45级之后就可以在**椛染之庭**刷绝缘套  <br/>
+雷神毕业面板：60/180/270(暴击/暴伤/充能)   <br/>
+雷神毕业面板参考：充能270+，双暴70-160(大毕业)，双暴65-120(小毕业)  <br/>
+
+雷神的[绝缘之旗印]( https://bbs.mihoyo.com/ys/obc/content/2322/detail )圣遗物参考：  <br/>
+主词条：花-生命，羽-攻击，沙-充能，杯-雷伤，冠-双暴。 **充能沙**，**雷伤杯**。  <br/>
+副词条：只要暴击暴伤充能攻击力，不要防御生命值元素精通。  <br/>
+
+生之花：明威之镡--生命值。  <br/>
+死之羽：切落之羽--攻击力。  <br/>
+时之沙：雷云之笼--元素充能效率。  <br/>
+空之杯：涌泉之盏--雷元素伤害加成或攻击力。  <br/>
+理之冠：华饰之兜--暴击率或暴击伤害。  <br/>
+--20221219
+
+<br/>
+
+> 专武命座
+
+雷神大毕业状态**专武命座**伤害提升比较巨大，测算数据来自于[原神伤害计算]( https://genshin-calc.sirokuma.cc/ ) 。<br/>
+以下是雷电将军满级大毕业，天赋10、等级90、暴击60、暴伤170、充能270的暴击伤害：  <br/>
+
+| 等级 |  武器  	 |  命座  |  暴击伤害 |  提升比例       | 
+| ---  | ----------- |  ----  | --------- |  -------------- |
+| 90   |  [鱼获]( https://bbs.mihoyo.com/ys/obc/content/2604/detail )  	 |  0	  |  20103    |  --             |  
+| 90   |  鱼获  	 |  2	  |  28718	  |  +8615（43%）   |  
+| 90   |  [薙草之稻光]( https://bbs.mihoyo.com/ys/obc/content/2602/detail ) |  0	  |  30133	  |  +10030（50%）  |  
+| 90   |  薙草之稻光 |  2	  |  43047	  |  +22944（141%） |  
+
+
+综上雷神专武命座对伤害提升显著：专武提升50%；专武加命座简直起飞了，可提升141%。 <br/>
+--20221221
+
+
 
 
 <br/>
