--- a/docs/生活/随笔/我的原神旅行观测记录.md
+++ b/docs/生活/随笔/我的原神旅行观测记录.md
@@ -17,7 +17,7 @@
 
 原神 旅行者 [米游社]( https://bbs.mihoyo.com/ys/ )
 
-提瓦特  蒙德  璃月 层岩巨渊   稻妻  须弥
+提瓦特 蒙德 璃月 层岩巨渊 稻妻 须弥
 
 班尼特 芭芭拉 丽莎 香菱 安柏 凯亚 凝光 提纳里 雷电将军
 
@@ -50,11 +50,11 @@
 5.前期冒险等级45级以下的萌新玩家，没有五星角色，可以合适搭配四星角色。   <br/>
 如当前我有十个角色：旅行者，御三家：安柏、凯亚、丽莎；凝光，烟绯，班尼特，芭芭拉，雷泽，诺艾尔。   <br/>
 主c、副c、奶妈、工具人四个角色组合：凝光，烟绯，班尼特，芭芭拉。   <br/>
-凝光，烟绯，班尼特 是主c；班尼特 是副c；奶妈是芭芭拉。   <br/>
+凝光，烟绯，班尼特 是主c；班尼特 也是副c；芭芭拉是奶妈。   <br/>
 冒险等级29级，最高角色等级49左右。   <br/>
 --20221116
 
-- 凝光在前期确实比较好用，尤其面对有盾的怪物。班尼特芭芭拉yyds，非常给力。--20221222
+- 凝光在前期确实比较好用，尤其面对有盾的怪物。班尼特芭芭拉yyds永远的神，非常给力。--20221222
 
 <br/>
 
@@ -66,7 +66,7 @@ https://bbs.mihoyo.com/ys/article/29312495   <br/>
 https://bbs.mihoyo.com/ys/article/30600790   <br/>
 --20221118
 
-- 了解元素反应才算是原神打怪入门进阶了。--20221222
+- 了解并使用元素反应才算是原神打怪入门进阶了。--20221222
 
 <br/>
 
@@ -151,7 +151,7 @@ xp党指喜欢、偏爱，外貌协会。雷神既是xp党也是强度党。 <br
 御三家还是有用的，安柏打火姬，丽莎后台挂雷，凯亚碎冰冻结。 <br/>
 旅行者基本只有草主才有用，其他风主、岩主、雷主太弱了。 <br/>
 **班尼特**不愧是六星战神，实在是强，着重培养。 <br/>
-注意升级顺序重要性，冒险等级>人物等级>武器等级>圣遗物的等级。 <br/>
+注意升级顺序重要性，（冒险等级、世界等级）人物等级>武器等级>圣遗物等级。 <br/>
 
 
 常有大佬东游西逛，申请进入我的世界，太厉害的boss请他们打。 <br/>
@@ -235,7 +235,7 @@ xp党指喜欢、偏爱，外貌协会。雷神既是xp党也是强度党。 <br
 雷神毕业面板参考：充能270+，双暴70-160(大毕业)，双暴65-120(小毕业)  <br/>
 
 雷神的[绝缘之旗印]( https://bbs.mihoyo.com/ys/obc/content/2322/detail )圣遗物参考：  <br/>
-主词条：花-生命，羽-攻击，沙-充能，杯-雷伤，冠-双暴。 **充能沙**，**雷伤杯**。  <br/>
+主词条：花-生命，羽-攻击，沙-充能，杯-雷伤，冠-双暴。 **充能沙**，**雷伤杯**，**暴击头**。  <br/>
 副词条：只要暴击暴伤充能攻击力，不要防御生命值元素精通。  <br/>
 
 生之花：明威之镡--生命值。  <br/>
