--- a/docs/生活/随笔/我的原神旅行观测记录.md
+++ b/docs/生活/随笔/我的原神旅行观测记录.md
@@ -129,6 +129,7 @@ e技能--元素战技  q技能--元素爆发   <br/>
 
 班尼特六星战神名不虚传，补血增伤，确实厉害。芭芭拉辅助奶妈补血恢复非常给力。 <br/>
 香菱锅巴喷火、后台挂火伤害可观。丽莎，堆元素精通点按e，1秒冷却打反应相当好用。 <br/>
+雷火超载大概一万伤害左右。 <br/>
 
 尘歌壶也到了9级，兑换须臾数值、经验值、精锻晶石等相当不错。 <br/>
 xp党指喜欢、偏爱，外貌协会。雷神既是xp党也是强度党。 <br/>
@@ -137,7 +138,50 @@ xp党指喜欢、偏爱，外貌协会。雷神既是xp党也是强度党。 <br
 小保底90抽之前歪了，大保底90抽没问题了。抽到雷神的话，看看能否有行秋，和班尼特香菱组成雷神国家队。 <br/>
 --20221219
 
+
+---
+
 <br/>
+
+10.雷神 绝缘本 琴
+
+祈愿3.3下半场12.27抽到的雷电将军。这两天在刷绝缘套。 <br/>
+有两个强烈的感受：雷神确实很强，雷神相当费钱。 <br/>
+现在我的雷神85级，精五鱼获，暴击59，暴伤111，充能275，天赋3-6-9，踩班尼特的宗室套点赞加成，最高伤害可以达到七万五。比之前过万的伤害有显著提升。可以说是横扫大世界了。 <br/>
+
+但与此同时，我的材料、经验书、金币、树脂如流水一般消耗了。材料如天光的哲学、名刀镡，经验书这些花费也正常，天赋与等级确实实打实提高了。 <br/>
+而刷绝缘套圣遗物完全靠运气，已经使用了五六十个脆弱树脂，合成了1.5倍的浓缩树脂。（一个脆弱树脂可得60个原粹树脂，40个原粹树脂合成一个浓缩树脂。） <br/>
+升级五星圣遗物已经花了几百万摩拉金币。之前玩了一个多月的原神，从来没感觉到金币不够，但现在全力升级一个角色时觉得自己相当贫穷。 <br/>
+现在的面板距离毕业：充能270+，双暴70-160(大毕业)，双暴65-120(小毕业)，还差不少。 <br/>
+角色等级，武器等级，天赋等级，圣遗物等级，都要升级。漫漫长路，原神无涯。 <br/>
+
+雷神国家队：雷电将军、班尼特、香菱、行秋，前三个有了，就是没有抽到行秋。 <br/>
+感觉少了个奶妈，不能回血总是少了些安全感。于是把西风骑士团的琴加了进来，还不错，能打能奶。 <br/>
+芭芭拉是比较纯粹的奶妈，琴是六边形战士，回血的同时还有一些攻击。伤害虽然比不上行秋，但是回血相当可以。 <br/>
+雷琴香班这样的配置只能说有点意思，强度上面基本没有提升。 <br/>
+在大世界雷班两个足以横行，打深渊的话就要强度伤害值，需要雷神国家或者雷九万班。 <br/>
+--20221229
+
+
+---
+
+<br/>
+
+11.赶路 大世界 剧情
+
+早柚抓晶蝶，长按重击火车头赶路确实相当可以。 <br/>
+须弥遇到死域就要清理干净，不能让我的世界有污染。<br/>
+锄大地还是有收获的，宝箱、神瞳、植物、矿产、小怪、boss，随处可见的惊喜。 <br/>
+芭芭拉e，雷神e，香菱e，班尼特q，香菱q，雷神q。回血，脱手，加攻击，高伤害。横扫大世界。 <br/>
+长次三千里寻母让人感动怜惜敬佩。 <br/>
+远吕羽氏遗事转动柱子平视仰视俯视真是折磨人。<br/>
+纳西妲传说任务，智慧主不愧是智慧主，看问题确实全面深刻。<br/>
+--20230112
+
+---
+
+<br/>
+
 
 ### 2.2、感想
 
@@ -172,7 +216,53 @@ xp党指喜欢、偏爱，外貌协会。雷神既是xp党也是强度党。 <br
 人生是在不停的赶路，但是慢下来也许会有不一样的感受。 <br/>
 --20221222
 
+---
+
 <br/>
+
+
+### 2.3、拾遗
+
+雷神国家队就缺少行秋了，要开始攒材料。 <br/>
+
+[行秋]( https://bbs.mihoyo.com/ys/obc/content/241/detail )  少年春衫薄<br/>
+
+等级突破材料需要： <br/>
+涤净青金碎屑×1、涤净青金断片×9、涤净青金块×9、涤净青金×6；净水之心×46；霓裳花×168；<br/>
+破损的面具×18、污秽的面具×30、不祥的面具×36；摩拉×2092530、大英雄经验419。 <br/>
+
+单个天赋升级材料需要： <br/>
+3本黄金的教导，21本黄金的指引，38本黄金的哲学，周三、周六、周日从秘境太山府获取。 <br/>
+6个破损的面具，22个污秽的面具，31个不祥的面具，6个北风狼掉落物北风之尾，1个智慧之冕和1652500摩拉。<br/>
+--20230103
+
+---
+
+原神3.4下半卡池有夜兰，屯原石，攒材料。 <br/>
+
+[夜兰]( https://bbs.mihoyo.com/ys/obc/content/4081/detail )  兰生幽谷 <br/>
+
+等级突破材料： <br/>
+涤净青金碎屑x1、涤净青金断片x9、涤净青金块x9、涤净青金x9、符纹之齿x46、星螺x168；  <br/>
+新兵的徽记x18、士官的徽记x30、尉官的徽记x36。 <br/>
+
+天赋升级材料： <br/>
+繁荣的教导x3+繁荣的指引x21+繁荣的哲学x38+鎏金之鳞x6+1个皇冠+165万摩拉； <br/>
+新兵的徽记x6+士官的徽记x22+尉官的徽记x31。 <br/>
+
+
+涤净青金需要打败**纯水精灵**或者无相之水获得。 <br/>
+符纹之齿需要在璃月层岩巨渊地下矿区击败**遗迹巨蛇**获得。 <br/>
+鎏金之鳞需要打**若陀龙王**周本获得，也可以通过异梦溶媒转化获得。 <br/>
+--20230111
+
+<br/>
+
+原神3.4版本海灯节开启时间：2023年1月20日，选择行秋。祈愿大保底夜兰。 <br/>
+
+<br/>
+
+
 
 ## 3、观测枢
 
@@ -263,12 +353,40 @@ xp党指喜欢、偏爱，外貌协会。雷神既是xp党也是强度党。 <br
 综上雷神专武命座对伤害提升显著：专武提升50%；专武加命座简直起飞了，可提升141%。 <br/>
 --20221221
 
+ <br/>
 
+以上伤害值是无愿力无攻击加成无暴击情况下的裸q的数据。 <br/>
+如果有班尼特宗室套20%加成、香班双火加成、讨龙英杰谭攻击加成、有暴击、满愿力则零命雷神鱼获大概会有十万左右伤害。 <br/>
+当前我是零命雷神59/118/272（暴击/暴伤/充能）最高伤害有八万左右，当主c绰绰有余，横扫大世界。 <br/>
+--20230111
+
+<br/>
+
+### 3.2、配队
+
+五星主c：神里绫华、甘雨、胡桃，魈、公子、宵宫，雷神、绫人、一斗、优菈、可莉、迪卢克、刻晴。<br/>
+原神四神：蒙德风神温迪，璃月岩神钟离，稻妻雷神雷电将军，须弥草神纳西妲。<br/>
+草神 种门 草原核yyds，超绽放，烈绽放，元素精通，速成配队。 <br/>
+
+| 队伍     | 角色        | 
+| -------- | ----------- |
+| 雷九万班 |  雷电将军、枫原万叶、班尼特、九条裟罗  |
+| 神鹤万心 |  绫华、申鹤、心海、万叶 	            |
+| 神甘万心 |  绫华、甘雨、心海、万叶 	            |
+| 胡行钟夜 |  胡桃、行秋、钟离、夜兰	            |
+| 万达国际 |  万叶、公子、班尼特、香菱	            |
+| 宵夜钟云 |  宵宮、夜兰、钟离、云堇                |
+| 雷神国家 |  雷神、行秋、班尼特、香菱	            |
+| 妮露绽放 |  妮露+心海+**纳西妲**+草主  	        |
+| 提八妲钟 |  提纳里+八重神子+纳西妲+钟离           |
+| 玉皇妲帝 |  刻晴+皇女+纳西妲+钟离 	            |
+| 刻晴激化 |  刻晴+钟离+纳西妲+皇女 	            |
+| 久草绽放 |  久岐忍+行秋+纳西妲+芭芭拉	            |
 
 
 <br/>
 
-### 3.2、圣遗物
+### 3.3、圣遗物
 
 > 圣遗物各部位主副词条属性详解
 
@@ -312,7 +430,7 @@ xp党指喜欢、偏爱，外貌协会。雷神既是xp党也是强度党。 <br
 <br/>
 
 
-### 3.3、天赋书
+### 3.4、天赋书
 
 
 一共有三个战斗天赋可升级：  普通攻击(A)  /  元素战技(E)  /  元素爆发(Q)  <br/>
@@ -580,12 +698,12 @@ xp党指喜欢、偏爱，外貌协会。雷神既是xp党也是强度党。 <br
     <td class="xl65" x:str>烟绯</td>
    </tr>
    <tr height="18" style='height:13.50pt;'>
-    <td class="xl65" x:str>魈</td>
+    <th class="xl65" style='text-align:left;' x:str>夜兰</th>
     <td class="xl65" x:str>云堇</td>
     <td class="xl65" x:str>钟离</td>
    </tr>
    <tr height="18" style='height:13.50pt;'>
-    <td class="xl65"></td>
+    <td class="xl65" x:str>魈</td>
     <td class="xl65" x:str>重云</td>
     <td class="xl65"></td>
    </tr>
@@ -717,7 +835,7 @@ xp党指喜欢、偏爱，外貌协会。雷神既是xp党也是强度党。 <br
 <br/>
 
 
-### 3.4、元素反应
+### 3.5、元素反应
 
 
 火，水，风，雷，草，冰，岩   七种元素
