--- a/docs/生活/随笔/我的原神旅行观测记录.md
+++ b/docs/生活/随笔/我的原神旅行观测记录.md
@@ -3,13 +3,32 @@
 
 ## 1、说明
 
+### 1.1、介绍
+
 《我的原神旅行观测记录》，又名《[原神之旅]( https://blog.xushufa.cn/%E7%94%9F%E6%B4%BB/%E9%9A%8F%E7%AC%94/%E6%88%91%E7%9A%84%E5%8E%9F%E7%A5%9E%E6%97%85%E8%A1%8C%E8%A7%82%E6%B5%8B%E8%AE%B0%E5%BD%95.html )》，记之以事，述之以情。<br/>
 自二零二二年十一月初开始下载原神，第一次玩这款全球知名游戏。安装包300多兆，但是装好后还要下载18g的资源，确实很大。<br/>
 之前只玩过功能比较简单、内容相对单一的游戏，像qq农场、部落冲突、天天酷跑、和平精英等等。<br/>
 世界规模如此巨大，内容剧情如此精彩，画面色彩如此绚丽的游戏还是首次接触。<br/>
-想不到一接触就入迷了，一入迷难以自拔，故此记录，以作旅行感想。<br/>
+想不到一接触就入迷了，一入迷难以自拔，故此记录，以作[旅行]( https://gitcode.net/xu180/document/-/blob/master/article/%E7%94%9F%E6%B4%BB/%E9%9A%8F%E7%AC%94/%E6%88%91%E7%9A%84%E5%8E%9F%E7%A5%9E%E6%97%85%E8%A1%8C%E8%A7%82%E6%B5%8B%E8%AE%B0%E5%BD%95.md )感想。<br/>
 原神UID：254901679，欢迎加好友。文档记录于个人[网站]( https://web.xushufa.cn )，欢迎浏览。<br/>
 --20221124
+
+
+
+### 1.2、网站
+
+| 序号   | 网站        |  地址          |  说明          |
+| -----  | ----------- |  ------------- |  ------------- |
+| 1      | [米游社]( https://www.miyoushe.com/ys/ )                                   | https://www.miyoushe.com/ys/                               | 原神官网   |
+| 2      | [提瓦特地图]( https://act.hoyolab.com/ys/app/interactive-map/index.html )  | https://act.hoyolab.com/ys/app/interactive-map/index.html  | 原神国际服 |
+| 3      | [原魔计算器]( https://genshin.mingyulab.com/cost/character_cost )          | https://genshin.mingyulab.com/cost/character_cost 		   | 工具 |
+| 4      | [莫娜占卜铺]( https://www.mona-uranai.com/intro )                          | https://www.mona-uranai.com/intro      					   | 工具 |
+| 5      | [原神伤害计算]( https://genshin-calc.sirokuma.cc/ )                        | https://genshin-calc.sirokuma.cc/      					   | 工具 |
+| 6      | [nga社区]( https://nga.178.com/thread.php?fid=650 )                        | https://nga.178.com/thread.php?fid=650 					   | 论坛 |
+| 7      | [原神TapTap社区]( https://www.taptap.cn/app/168332/topic )                 | https://www.taptap.cn/app/168332/topic 					   | 论坛 |
+| 8      | [原神贴吧]( https://tieba.baidu.com/f?kw=%E5%8E%9F%E7%A5%9E )              | https://tieba.baidu.com/f?kw=%E5%8E%9F%E7%A5%9E            | 论坛 |
+
+
 
 <br/>
 
@@ -674,10 +693,10 @@ xp党指喜欢、偏爱，外貌协会。雷神既是xp党也是强度党。 <br
     <td class="xl67" style='font-weight:bold;' x:str>繁荣</td>
     <td class="xl67" style='font-weight:bold;' x:str>勤劳</td>
     <td class="xl67" style='font-weight:bold;' x:str>黄金</td>
-    <td class="xl65" rowspan="7" x:str>全部</td>
+    <td class="xl65" rowspan="8" x:str>全部</td>
    </tr>
    <tr height="18" style='height:13.50pt;'>
-    <td class="xl70" height="108" rowspan="6" x:str>适配角色</td>
+    <td class="xl70" height="108" rowspan="7" x:str>适配角色</td>
     <td class="xl65" x:str>刻晴</td>
     <td class="xl65" x:str>枫原万叶</td>
     <td class="xl65" x:str>北斗</td>
@@ -705,6 +724,11 @@ xp党指喜欢、偏爱，外貌协会。雷神既是xp党也是强度党。 <br
    <tr height="18" style='height:13.50pt;'>
     <td class="xl65" x:str>魈</td>
     <td class="xl65" x:str>重云</td>
+    <td class="xl65"></td>
+   </tr>
+   <tr height="18" style='height:13.50pt;'>
+    <td class="xl65" x:str></td>
+    <td class="xl65" x:str>瑶瑶</td>
     <td class="xl65"></td>
    </tr>
   </table>
